<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:id="@+id/loginscrn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="SWIPE LOCATIONS"
                android:textColor="#000000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <TextView android:id="@+id/instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="CLICK TO LEARN MORE"
                android:textSize="15dp"
                android:textColor="#000000"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="Au Bon Pain" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:background="#FFFFFF"
                android:text="Bleeker Street" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Chick-fil-A" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Chili's" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Croutons" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Cary Street Market and Deli" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Einstein's Bros (MCV Campus)" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Einstein's Bros (Shafer Court Dining Center)" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Freshii" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Harris Hall Convenience Store" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="IHOP Express" />

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Jonah's" />

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Market 810" />

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Panda Express" />

            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Pizza Hut Express" />

            <Button
                android:id="@+id/button16"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="P.O.D Market" />

            <Button
                android:id="@+id/button17"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Raising Cane's" />

            <Button
                android:id="@+id/button18"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Shake Smart" />

            <Button
                android:id="@+id/button19"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Starbucks Coffee (Cabell Library)" />

            <Button
                android:id="@+id/button20"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Starbucks Coffee (Cary and Belvidere)" />

            <Button
                android:id="@+id/button21"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Starbucks Coffee (Larrick Student Center)" />

            <Button
                android:id="@+id/button22"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Subway" />

            <Button
                android:id="@+id/button23"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Taco Bell" />

            <Button
                android:id="@+id/button24"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Wendys" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu"
        android:id="@+id/nav_drawer">

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>