<resources>

    <string name="app_name">group21test</string>
    <string name="event">Event</string>
    <string name="food">Food</string>
    <string name="create_event">Create Event</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Home">Home</string>

    <string-array name = "filterByOptionArray">
        <item>Name</item>
        <item>Time</item>
        <item>Fee</item>
        <item>Closest Location</item>
    </string-array>

    <string-array name = "orderTypeOptionArray">
        <item>Ascending</item>
        <item>Discending</item>
    </string-array>

</resources>
